fix(merlin-www-article): only align left on large screen for video article sponsor

--- a/packages/merlin-www-article/sass/traveller/_header.scss
+++ b/packages/merlin-www-article/sass/traveller/_header.scss
@@ -24,7 +24,9 @@
 	}
 
 	.a-header__sponsor {
-		margin-left: 0;
+		@include min-screen($DESKTOP_SIDE_GUTTER_BREAKPOINT) {
+			margin-left: 0;
+		}
 	}
 }
 
